Closed Bug 802809 Opened 13 years ago Closed 13 years ago

IonMonkey: assert that PRESET LDefinitions are followed by LNop

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla19

People

(Reporter: luke, Assigned: jandem)

Details

(Whiteboard: [ion:t])

Attachments

(1 file)

As explained by the comment in defineFixed, this is necessary for better register allocation when a PRESET definition is followed by a FIXED use. One place this is currently missing is the lowering of MParameter, so maybe this will be a slight speedup.
Attached patch PatchSplinter Review
This is not a problem for LParameter because its (fixed) output is not a register but a memory location. The patch just asserts the next instruction has no fixed uses, it's usually LNop or LOsiPoint.
Assignee: general → jdemooij
Status: NEW → ASSIGNED
Attachment #675229 - Flags: review?(dvander)
Attachment #675229 - Flags: review?(dvander) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: