Bug 802809 - Assert PRESET LDefinitions are not followed by instructions with fixed uses. r=dvander